// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WaitRouterForm shoud save a normal wait 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "uuid": "6c22884b-0e35-4206-982e-18320691eda9",
        },
      ],
      "router": Object {
        "cases": Array [],
        "categories": Array [
          Object {
            "exit_uuid": "6c22884b-0e35-4206-982e-18320691eda9",
            "name": "All Responses",
            "uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
          },
        ],
        "default_category_uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
        "operand": "@input.text",
        "type": "switch",
        "wait": Object {
          "type": "msg",
        },
      },
      "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
    },
    "ui": Object {
      "config": Object {
        "cases": Object {},
      },
      "position": null,
      "type": "wait_for_response",
    },
  },
]
`;

exports[`WaitRouterForm should render a normal wait 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Wait for response
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_type"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Wait for the contact to respond"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="result_name"
        >
          <div
            class="optional_text_input toggle"
          >
            <span
              class="toggle_link "
              data-spec="toggle-link"
              data-testid="toggle-link"
            >
              Save as
              <div
                data-use-vue-component-wrap=""
                style="all: unset;"
              >
                <span
                  class="unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cleanest"
                  data-passed-props="[object Object]"
                  data-v-a1936218=""
                >
                  <svg
                    fill="none"
                    viewBox="0 0 40 40"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      class="primary"
                      d="M14.0093 34.6856L29.5962 20.9572C29.726 20.8328 29.8292 20.6835 29.8997 20.5182C29.9702 20.3529 30.0066 20.1751 30.0066 19.9954C30.0066 19.8157 29.9702 19.6379 29.8997 19.4726C29.8292 19.3073 29.726 19.158 29.5962 19.0336L14.0093 5.31149C13.8857 5.20174 13.7412 5.11796 13.5845 5.06514C13.4279 5.01232 13.2622 4.99153 13.0973 5.00401C12.9325 5.01648 12.7718 5.06197 12.6249 5.13776C12.4779 5.21356 12.3477 5.31812 12.242 5.44522L10.296 7.75745C10.0786 8.0153 9.97133 8.34827 9.99728 8.68451C10.0232 9.02076 10.1804 9.33332 10.4347 9.55474L22.2496 19.7598C22.2837 19.7891 22.311 19.8255 22.3298 19.8664C22.3486 19.9072 22.3583 19.9517 22.3583 19.9967C22.3583 20.0416 22.3486 20.0861 22.3298 20.1269C22.311 20.1678 22.2837 20.2042 22.2496 20.2335L10.4385 30.4423C10.3118 30.5523 10.2081 30.6862 10.1333 30.8363C10.0584 30.9865 10.0139 31.1499 10.0023 31.3172C9.98744 31.4836 10.0061 31.6513 10.0572 31.8104C10.1083 31.9695 10.1908 32.1167 10.2997 32.2434L12.247 34.5568C12.3529 34.6836 12.4832 34.7879 12.6301 34.8635C12.7771 34.9391 12.9377 34.9845 13.1024 34.997C13.2672 35.0094 13.4328 34.9887 13.5894 34.9361C13.746 34.8835 13.8905 34.8 14.0143 34.6906L14.0093 34.6856Z"
                      fill="#3B414D"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Confirm 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`WaitRouterForm should render wait for audio with previous name 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Wait for Audio
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_type"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Wait for an audio recording"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="result_name"
        >
          <div
            class="optional_text_input "
          >
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
              unnnic-input="true"
            >
              <div
                class="unnnic-input size-sm"
                data-passed-props="[object Object]"
                data-testid="Save as result"
                data-v-391ed932=""
              >
                <span
                  class="label unnnic-font secondary color-neutral-cloudy body-md"
                  data-v-391ed932=""
                >
                   Save as result 
                </span>
                <div
                  class="input-container"
                  data-v-391ed932=""
                >
                  <!---->
                  <input
                    class="unnnic-font secondary"
                    data-v-391ed932=""
                    maxlength="64"
                    placeholder="Result"
                    type="text"
                  />
                  <!---->
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Confirm 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`WaitRouterForm should use the right operand for media types 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "uuid": "9adce29f-da95-4182-9cb3-0f1e3bf714e5",
        },
      ],
      "router": Object {
        "cases": Array [],
        "categories": Array [
          Object {
            "exit_uuid": "9adce29f-da95-4182-9cb3-0f1e3bf714e5",
            "name": "All Responses",
            "uuid": "6b59e863-2e14-442b-9987-aaa284871b8e",
          },
        ],
        "default_category_uuid": "6b59e863-2e14-442b-9987-aaa284871b8e",
        "operand": "@input",
        "result_name": "Previous Name",
        "type": "switch",
        "wait": Object {
          "hint": Object {
            "type": "audio",
          },
          "type": "msg",
        },
      },
      "uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
    },
    "ui": Object {
      "config": Object {
        "cases": Object {},
      },
      "position": null,
      "type": "wait_for_response",
    },
  },
]
`;
